fix: page title and dark mode colors

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -215,6 +215,7 @@ h2 {
 
 body {
     background: var(--bg-body);
+    color: var(--color-text-primary);
 }
 
 ::-webkit-scrollbar {
